// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SQL API Postgres (Data) SELECT COUNT(*) as cn, "status" FROM Orders GROUP BY 2 ORDER BY cn DESC: sql_orders 1`] = `
Array [
  Object {
    "cn": "2",
    "status": "processed",
  },
  Object {
    "cn": "2",
    "status": "new",
  },
  Object {
    "cn": "1",
    "status": "shipped",
  },
]
`;

exports[`SQL API Postgres (Data) date/string measures in view: date case 1`] = `
Array [
  Object {
    "val": "2024-01-01T00:00:00.000",
  },
  Object {
    "val": "2024-01-02T00:00:00.000",
  },
  Object {
    "val": "2024-01-03T00:00:00.000",
  },
  Object {
    "val": "2024-01-04T00:00:00.000",
  },
  Object {
    "val": "2024-01-05T00:00:00.000",
  },
]
`;

exports[`SQL API Postgres (Data) date/string measures in view: string case 1`] = `
Array [
  Object {
    "val": "1 / 100",
  },
  Object {
    "val": "1 / 200",
  },
  Object {
    "val": "1 / 300",
  },
  Object {
    "val": "1 / 500",
  },
  Object {
    "val": "1 / 600",
  },
]
`;

exports[`SQL API Postgres (Data) metabase max number: metabase max number 1`] = `
Array [
  Object {
    "id": 2,
    "numberTotal": 200,
    "pivot-grouping": 0,
    "status": "new",
  },
  Object {
    "id": 1,
    "numberTotal": 100,
    "pivot-grouping": 0,
    "status": "new",
  },
]
`;

exports[`SQL API Postgres (Data) no limit for non matching count push down: no limit for non matching count push down 1`] = `
Array [
  Object {
    "a0": 2024-01-05T00:00:00.000Z,
    "a1": 2024-01-01T00:00:00.000Z,
    "a2": "100000",
  },
]
`;

exports[`SQL API Postgres (Data) percentage of total sum: percentage of total sum 1`] = `
Array [
  Object {
    "m0": 1,
  },
]
`;

exports[`SQL API Postgres (Data) power bi post aggregate measure wrap: power bi post aggregate measure wrap 1`] = `
Array [
  Object {
    "a0": 1,
    "a1": "2024-01-05T00:00:00.000",
    "createdAt": 2024-01-05T00:00:00.000Z,
  },
]
`;

exports[`SQL API Postgres (Data) powerbi min max push down: powerbi_min_max_push_down 1`] = `
Array [
  Object {
    "a0": 2024-01-05T00:00:00.000Z,
    "a1": 2024-01-01T00:00:00.000Z,
  },
]
`;

exports[`SQL API Postgres (Data) query with intervals: timestamps 1`] = `
Array [
  Object {
    "c0": 2035-01-01T00:00:00.000Z,
    "c1": 2025-11-01T00:00:00.000Z,
    "c2": 2033-09-01T00:00:00.000Z,
    "c3": 2024-01-06T12:01:50.000Z,
    "c4": 2025-10-01T00:04:19.245Z,
    "timestamp": 2024-01-01T00:00:00.000Z,
  },
  Object {
    "c0": 2035-01-02T00:00:00.000Z,
    "c1": 2025-11-02T00:00:00.000Z,
    "c2": 2033-09-02T00:00:00.000Z,
    "c3": 2024-01-07T12:01:50.000Z,
    "c4": 2025-10-02T00:04:19.245Z,
    "timestamp": 2024-01-02T00:00:00.000Z,
  },
  Object {
    "c0": 2035-01-03T00:00:00.000Z,
    "c1": 2025-11-03T00:00:00.000Z,
    "c2": 2033-09-03T00:00:00.000Z,
    "c3": 2024-01-08T12:01:50.000Z,
    "c4": 2025-10-03T00:04:19.245Z,
    "timestamp": 2024-01-03T00:00:00.000Z,
  },
  Object {
    "c0": 2035-01-04T00:00:00.000Z,
    "c1": 2025-11-04T00:00:00.000Z,
    "c2": 2033-09-04T00:00:00.000Z,
    "c3": 2024-01-09T12:01:50.000Z,
    "c4": 2025-10-04T00:04:19.245Z,
    "timestamp": 2024-01-04T00:00:00.000Z,
  },
  Object {
    "c0": 2035-01-05T00:00:00.000Z,
    "c1": 2025-11-05T00:00:00.000Z,
    "c2": 2033-09-05T00:00:00.000Z,
    "c3": 2024-01-10T12:01:50.000Z,
    "c4": 2025-10-05T00:04:19.245Z,
    "timestamp": 2024-01-05T00:00:00.000Z,
  },
]
`;
